--- a/package.json
+++ b/package.json
@@ -9,44 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.27.5",
-    "@hookform/resolvers": "^3.3.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@stripe/stripe-js": "^2.2.1",
-    "@uploadthing/react": "^6.0.2",
-    "class-variance-authority": "^0.7.0",
+    "@clerk/nextjs": "^5.3.7",
+    "@hookform/resolvers": "3.9.0",
+    "@radix-ui/react-alert-dialog": "1.1.1",
+    "@radix-ui/react-checkbox": "1.1.1",
+    "@radix-ui/react-dialog": "1.1.1",
+    "@radix-ui/react-dropdown-menu": "2.1.1",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-select": "2.1.1",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slot": "1.1.0",
+    "@stripe/stripe-js": "4.4.0",
+    "@uploadthing/react": "6.7.2",
+    "class-variance-authority": "0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
-    "next": "14.0.4",
-    "query-string": "^8.1.0",
+    "lucide-react": "0.438.0",
+    "mongodb": "6.8.0",
+    "mongoose": "8.6.0",
+    "next": "14.2.7",
+    "query-string": "9.1.0",
     "react": "^18",
-    "react-datepicker": "^4.24.0",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.0",
-    "stripe": "^14.8.0",
-    "svix": "^1.15.0",
-    "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.0.4",
-    "zod": "^3.22.4"
+    "react-datepicker": "7.3.0",
+    "react-dom": "18.3.1",
+    "react-hook-form": "7.53.0",
+    "stripe": "16.9.0",
+    "svix": "1.32.0",
+    "tailwind-merge": "2.5.2",
+    "tailwindcss-animate": "1.0.7",
+    "uploadthing": "6.13.2",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-datepicker": "^4.19.3",
-    "@types/react-dom": "^18",
+    "@types/node": "22.5.2",
+    "@types/react": "18.3.5",
+    "@types/react-datepicker": "6.2.0",
+    "@types/react-dom": "18.3.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
+    "postcss": "8.4.44",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "5.5.4"
   }
 }
